--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.12.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "node-static": "^0.7.11",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4"
   }
 }
